# armada-engine-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  dependency.sh  dump.md  engine.cfg  engineconfig.yaml  entt.natvis  runwithdgpu.sh  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Sources/Engine/: Common.hh  Engine.cc  Engine.hh  GlobalContext.cc  GlobalContext.hh
Sources/Engine/AssetSystem/: AssetSystem.cc  AssetSystem.hh
Sources/Engine/Camera/: Camera.cc  Camera.hh  FpsCamera.cc  FpsCamera.hh
Sources/Engine/Core/: Event.hh  EventManager.cc  EventManager.hh  InputManager.cc  InputManager.hh
Sources/Engine/ECSSystem/: Component.cpp  Component.h  Entity.cc  Entity.hh  LightComponent.cc  LightComponent.hh  MeshComponent.cpp  MeshComponent.h  NameComponent.cc  NameComponent.hh  StageManager.cc  StageManager.hh  TransformComponent.cpp  TransformComponent.h
Sources/Engine/RenderSystem/: Light.cc  Light.hh  Model.cc  Model.hh  OpenglShader.cc  OpenglShader.hh  RenderSystem.cc  RenderSystem.hh  Shader.cc  Shader.hh  ShaderFactory.cc  ShaderFactory.hh  ShaderManager.cc  ShaderManager.hh  Texture.cc  Texture.hh
Sources/Engine/RenderSystem/Editorimgui/: UIDrawSystem.cc  UIDrawSystem.hh
Sources/Engine/RenderSystem/Shaders/: DebugNormalShader.cc  DebugNormalShader.hh  PhongShader.cc  PhongShader.hh  PointLightShader.cc  PointLightShader.hh  Shader.cc  Shader.hh
Sources/Engine/Utils/: Config.cc  Config.hh  ConfigTypes.hh  Logger.cc  Logger.hh
Sources/Examples/Sandbox/: Main.cc
Sources/Examples/Yamltest/: UnitTest.cc
Sources/Examples/debug_sources/: test.cc
Sources/Examples/debugtest/: test.cc
Sources/Examples/emrald/: CustGetInfo.cc
Sources/Examples/farlight/: CustGetInfo.cc  misc.hh
Sources/HardDependencies/ImReflect/: ImReflect.hpp
resources/models/: arrow2.glb  bl_y.glb  minuszarrow.glb  terraintest.glb
resources/models/fense/: fense.mtl
resources/models/fense2/: fense.mtl
resources/models/mi35m/: MI-35M.mtl
resources/shaders/: fragLightWhite.frag  fragSpecBuiLight.frag  lightFragmentShader.frag  lightVertexShader.vert  normaldebug.geom  pbrstd.frag  phongFragmentShader.frag  phongVertexShader.vert  sheencolorFragmentShader.frag  universeVertexShader.vert  vertFloor.vert
shaders/: fragBuiLighting.frag  fragSpecBuiLight.frag  fragTriTest.frag  fragmentshader.frag  universeVertexShader.vert  vertTriTest.vert  vertexshader.vert
sources/engine/: common.hh  engine.cc  engine.hh
sources/engine/assetsystem/: assetsystem.cc  assetsystem.hh
sources/engine/camera/: Camera.cc  Camera.hh
sources/engine/rendersystem/: CustShader.cc  CustShader.hh  Model.cc  Model.hh  OpenglShader.cc  Shader.hh  ShaderFinal.cc  ShaderFinal.hh  modelloader.cc  modelloader.hh  rendersystem.cc  rendersystem.hh  textureSdlGl.cc
sources/engine/utils/: Debugger.cc  config.cc  config.hh  configtypes.hh  logger.cc  logger.hh
sources/examples/emrald/: misc.cc  misc.hh  spCust.cc  spCust.hh
sources/examples/farlight/: CustGetInfo.cc  misc.cc
sources/examples/sandbox/: main.cc  main.cpp
sources/usrlibs/dbgjellyfish/: dbgJellyfish.cc  dbgJellyfish.hh
sources/usrlibs/isl/: CustShader.cc  CustShader.hh  ShaderFinal.cc
sources/usrlibs/modelconverter/: modelloader.cc  modelloader.hh
